AMBARI-15465. Increase Ambari Server Perm gen default value. (Daniel Gergley via stoader)